minor fix to visible-xs class again

--- a/module3/css/styles.css
+++ b/module3/css/styles.css
@@ -71,17 +71,14 @@ body {
   	font-family: arial, Helvetica;
   
 }
-
-@media only screen and (max-width : 768px) {
  
-	.visible-xs { 
+.visible-xs { 
 	background-color: white;
 	text-align: center;
 	border: 1px;
 	border-color: black;
 	margin-top: 0px;
-    margin-bottom: 0px;
-
+    	margin-bottom: 0px;
 } 
 
 
